--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "autoprefixer": "^10.4.14",
+    "framer": "^2.3.0",
     "next": "13.3.0",
+    "postcss": "^8.4.22",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.1"
   }
 }
