--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "autoprefixer": "^10.4.14",
     "framer": "^2.3.0",
+    "lodash": "^4.17.21",
     "next": "13.3.0",
     "postcss": "^8.4.22",
     "react": "18.2.0",
