--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -17,6 +17,7 @@
     "framer": "^2.3.0",
     "lodash": "^4.17.21",
     "next": "13.3.0",
+    "particles.js": "^2.0.0",
     "postcss": "^8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
