--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
+    "react-spring": "^9.7.1",
     "tailwindcss": "^3.3.1"
   }
 }
