--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
+    "@react-spring/parallax": "^9.7.2",
     "autoprefixer": "^10.4.14",
     "framer": "^2.3.0",
     "lodash": "^4.17.21",
